use writeString in some cases